--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,5 @@
 app_status = dev
 
 [tolgee]
-;证联接入地址
-url = https://tolgee.uhouzz.net
-api-key = 'tgpak_gnptkndlortdinlgnvwti5bymzugw3jxnvrwwmdum5xwk'
+url = https://tolgee.xxx.net
+api-key = tgpak_xxxxxxxxxx
